fix import error

--- a/tensorflow1.ipynb
+++ b/tensorflow1.ipynb
@@ -2,111 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 23,
    "id": "37e63e79",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Unexpected exception formatting exception. Falling back to standard exception\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Traceback (most recent call last):\n",
-      "  File \"C:\\Users\\durga\\AppData\\Roaming\\Python\\Python311\\site-packages\\IPython\\core\\interactiveshell.py\", line 3460, in run_code\n",
-      "    exec(code_obj, self.user_global_ns, self.user_ns)\n",
-      "  File \"C:\\Users\\durga\\AppData\\Local\\Temp\\ipykernel_23204\\1026856682.py\", line 6, in <module>\n",
-      "    import tensorflow_datasets as tfds\n",
-      "  File \"c:\\Python311\\Lib\\site-packages\\tensorflow_datasets\\__init__.py\", line 43, in <module>\n",
-      "    import tensorflow_datasets.core.logging as _tfds_logging\n",
-      "  File \"c:\\Python311\\Lib\\site-packages\\tensorflow_datasets\\core\\__init__.py\", line 22, in <module>\n",
-      "    from tensorflow_datasets.core import community\n",
-      "  File \"c:\\Python311\\Lib\\site-packages\\tensorflow_datasets\\core\\community\\__init__.py\", line 18, in <module>\n",
-      "    from tensorflow_datasets.core.community.huggingface_wrapper import mock_builtin_to_use_gfile\n",
-      "  File \"c:\\Python311\\Lib\\site-packages\\tensorflow_datasets\\core\\community\\huggingface_wrapper.py\", line 31, in <module>\n",
-      "    from tensorflow_datasets.core import dataset_builder\n",
-      "  File \"c:\\Python311\\Lib\\site-packages\\tensorflow_datasets\\core\\dataset_builder.py\", line 33, in <module>\n",
-      "    from tensorflow_datasets.core import dataset_info\n",
-      "  File \"c:\\Python311\\Lib\\site-packages\\tensorflow_datasets\\core\\dataset_info.py\", line 49, in <module>\n",
-      "    from tensorflow_datasets.core import splits as splits_lib\n",
-      "  File \"c:\\Python311\\Lib\\site-packages\\tensorflow_datasets\\core\\splits.py\", line 34, in <module>\n",
-      "    from tensorflow_datasets.core import proto as proto_lib\n",
-      "  File \"c:\\Python311\\Lib\\site-packages\\tensorflow_datasets\\core\\proto\\__init__.py\", line 18, in <module>\n",
-      "    from tensorflow_datasets.core.proto import dataset_info_generated_pb2 as dataset_info_pb2  # pylint: disable=line-too-long\n",
-      "    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"c:\\Python311\\Lib\\site-packages\\tensorflow_datasets\\core\\proto\\dataset_info_generated_pb2.py\", line 30, in <module>\n",
-      "    from tensorflow_datasets.core.proto import feature_generated_pb2 as feature__pb2\n",
-      "  File \"c:\\Python311\\Lib\\site-packages\\tensorflow_datasets\\core\\proto\\feature_generated_pb2.py\", line 94, in <module>\n",
-      "    _descriptor.FieldDescriptor(\n",
-      "  File \"c:\\Python311\\Lib\\site-packages\\google\\protobuf\\descriptor.py\", line 561, in __new__\n",
-      "TypeError: Descriptors cannot not be created directly.\n",
-      "If this call came from a _pb2.py file, your generated code is out of date and must be regenerated with protoc >= 3.19.0.\n",
-      "If you cannot immediately regenerate your protos, some other possible workarounds are:\n",
-      " 1. Downgrade the protobuf package to 3.20.x or lower.\n",
-      " 2. Set PROTOCOL_BUFFERS_PYTHON_IMPLEMENTATION=python (but this will use pure-Python parsing and will be much slower).\n",
-      "\n",
-      "More information: https://developers.google.com/protocol-buffers/docs/news/2022-05-06#python-updates\n",
-      "\n",
-      "During handling of the above exception, another exception occurred:\n",
-      "\n",
-      "Traceback (most recent call last):\n",
-      "  File \"C:\\Users\\durga\\AppData\\Roaming\\Python\\Python311\\site-packages\\IPython\\core\\interactiveshell.py\", line 2057, in showtraceback\n",
-      "    stb = self.InteractiveTB.structured_traceback(\n",
-      "          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"C:\\Users\\durga\\AppData\\Roaming\\Python\\Python311\\site-packages\\IPython\\core\\ultratb.py\", line 1288, in structured_traceback\n",
-      "    return FormattedTB.structured_traceback(\n",
-      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"C:\\Users\\durga\\AppData\\Roaming\\Python\\Python311\\site-packages\\IPython\\core\\ultratb.py\", line 1177, in structured_traceback\n",
-      "    return VerboseTB.structured_traceback(\n",
-      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"C:\\Users\\durga\\AppData\\Roaming\\Python\\Python311\\site-packages\\IPython\\core\\ultratb.py\", line 1030, in structured_traceback\n",
-      "    formatted_exception = self.format_exception_as_a_whole(etype, evalue, etb, number_of_lines_of_context,\n",
-      "                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"C:\\Users\\durga\\AppData\\Roaming\\Python\\Python311\\site-packages\\IPython\\core\\ultratb.py\", line 960, in format_exception_as_a_whole\n",
-      "    frames.append(self.format_record(record))\n",
-      "                  ^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"C:\\Users\\durga\\AppData\\Roaming\\Python\\Python311\\site-packages\\IPython\\core\\ultratb.py\", line 870, in format_record\n",
-      "    frame_info.lines, Colors, self.has_colors, lvals\n",
-      "    ^^^^^^^^^^^^^^^^\n",
-      "  File \"C:\\Users\\durga\\AppData\\Roaming\\Python\\Python311\\site-packages\\IPython\\core\\ultratb.py\", line 704, in lines\n",
-      "    return self._sd.lines\n",
-      "           ^^^^^^^^^^^^^^\n",
-      "  File \"C:\\Users\\durga\\AppData\\Roaming\\Python\\Python311\\site-packages\\stack_data\\utils.py\", line 144, in cached_property_wrapper\n",
-      "    value = obj.__dict__[self.func.__name__] = self.func(obj)\n",
-      "                                               ^^^^^^^^^^^^^^\n",
-      "  File \"C:\\Users\\durga\\AppData\\Roaming\\Python\\Python311\\site-packages\\stack_data\\core.py\", line 734, in lines\n",
-      "    pieces = self.included_pieces\n",
-      "             ^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"C:\\Users\\durga\\AppData\\Roaming\\Python\\Python311\\site-packages\\stack_data\\utils.py\", line 144, in cached_property_wrapper\n",
-      "    value = obj.__dict__[self.func.__name__] = self.func(obj)\n",
-      "                                               ^^^^^^^^^^^^^^\n",
-      "  File \"C:\\Users\\durga\\AppData\\Roaming\\Python\\Python311\\site-packages\\stack_data\\core.py\", line 681, in included_pieces\n",
-      "    pos = scope_pieces.index(self.executing_piece)\n",
-      "                             ^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"C:\\Users\\durga\\AppData\\Roaming\\Python\\Python311\\site-packages\\stack_data\\utils.py\", line 144, in cached_property_wrapper\n",
-      "    value = obj.__dict__[self.func.__name__] = self.func(obj)\n",
-      "                                               ^^^^^^^^^^^^^^\n",
-      "  File \"C:\\Users\\durga\\AppData\\Roaming\\Python\\Python311\\site-packages\\stack_data\\core.py\", line 660, in executing_piece\n",
-      "    return only(\n",
-      "           ^^^^^\n",
-      "  File \"C:\\Users\\durga\\AppData\\Roaming\\Python\\Python311\\site-packages\\executing\\executing.py\", line 190, in only\n",
-      "    raise NotOneValueFound('Expected one value, found 0')\n",
-      "executing.executing.NotOneValueFound: Expected one value, found 0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import os\n",
     "import PIL\n",
     "import PIL.Image\n",
     "import tensorflow as tf\n",
-    "import tensorflow_datasets as tfds"
+    "#import tensorflow_datasets as tfds"
    ]
   },
   {
